project is phiscally completed

--- a/index.html
+++ b/index.html
@@ -7,6 +7,37 @@
     <title>Coffee Junkie</title>
   </head>
   <body>
-    <h1>hello world</h1>
+    <img id="Top" src="./images/logo.png" alt="">
+    <h2>Coffee Junkie</h2>
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="./About.html" target="_blank">About</a></li>
+      <li><a href="./Numbers.html" target="_blank">Numbers</a></li>
+      <li><a href="./contact.html" target="_blank">Contact</a></li>
+    </ul>
+    <img src="./images/background.jpeg" alt="">
+    <h1>Featured Products</h1>
+    <br>
+    <h2>House Blend Cofee</h2>
+    <img src="./images/house-blend.jpeg" alt="">
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem quos architecto sed ipsum nisi corrupti officia natus assumenda consectetur, modi aspernatur molestiae accusantium porro. Sequi neque autem, beatae enim accusamus velit! Tenetur incidunt expedita hic officiis laboriosam, placeat ducimus doloremque veniam laudantium deserunt, nihil neque quaerat cupiditate voluptatem, quos laborum!</p>
+    <a href="https://www.wikipedia.org/">Details</a>
+    <br>
+    <h2>French Rost</h2>
+    <img src="./images/french-roast.jpeg" alt="">
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit velit eos quod officia labore animi optio, dolore corporis porro. Autem nesciunt pariatur reiciendis odit laboriosam veniam temporibus nobis minus ipsam ex error placeat illum enim aliquam voluptate ab repellat voluptas, facilis beatae vero. Cumque, soluta harum repellendus officia perspiciatis vel?</p>
+    <a href="https://www.wikipedia.org/">Details</a>
+    <br>
+    <h2>Columbian Rost</h2>
+    <img src="./images/columbian-roast.jpeg" alt="">
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur aliquid, voluptates cumque nulla excepturi quos assumenda adipisci maxime asperiores dicta, laudantium recusandae quo quis, nisi qui aut dolorum placeat ducimus accusamus! Voluptas quia est quisquam facere tempora expedita optio dolor et, deserunt molestiae iusto aperiam corrupti delectus aliquam magnam eligendi!</p>
+    <a href="https://www.wikipedia.org/">Details</a>
+    <br>
+    <br>
+    <br>
+    <br>
+    <p>copyright&copy2019</p>
+    <a href="#Top">Back To Top</a>
+
   </body>
 </html>
